# quant-finance-simulator

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  cli.py  config.py  config.yaml  pyproject.toml  requirements.txt  results.json  run_simulation.py  tree.py
.github/workflows/: python.yml
examples/: plot_gbm.py
src/analysis/: performance.py  statistics.py  visualization.py
src/finance/: black_scholes.py  option_pricing.py
src/mlboh/: __init__.py  analytics.py  calibration.py  constants.py  main.py  portfolio.py  pricing.py  reporting.py  risk.py
src/processes/: gbm.py  monte_carlo.py
src/simulations/: monte_carlo.py
src/utils/: cache_manager.py  config_loader.py  exporter.py  logger.py
tests/: test_analysis.py  test_black_scholes.py  test_coverage_booster.py  test_gbm.py  test_monte_carlo.py  test_option_pricing.py  test_risk.py  test_utils.py  test_visualization.py
