[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "black-sigma-terminal"
version = "0.1.0"
description = "Institutional-grade quantitative finance simulator with Monte Carlo, Black-Scholes analytics, and risk analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Hossein Feyzbakhsh" }
]

keywords = [
    "quantitative-finance",
    "monte-carlo",
    "black-scholes",
    "options",
    "finance",
    "streamlit",
    "simulation",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "streamlit>=1.57",
    "numpy>=2.2",
    "pandas>=2.3",
    "scipy>=1.15",
    "matplotlib>=3.10",
    "plotly>=6.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.2",
    "yfinance>=0.2.40",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

lint.select = [
    "E",
    "F",
    "I",
    "B",
]

lint.ignore = [
    "E501",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

filterwarnings = [
    "ignore::RuntimeWarning",
    "ignore:One or more sample arguments is too small",
    "ignore:Precision loss occurred in moment calculation",
]